--- a/Arisa - Modeling-Classification-v17.ipynb
+++ b/Arisa - Modeling-Classification-v17.ipynb
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "02714650-c2ad-4c32-bad6-56a32dcbb874",
    "metadata": {
     "tags": []
@@ -2186,7 +2186,21 @@
       "Epoch 15: val_f1_weighted did not improve from 0.76422\n",
       "210/210 [==============================] - 3242s 15s/step - loss: 3.0369 - accuracy: 0.7325 - precision_7: 0.3889 - f1_macro: 0.1315 - f1_weighted: 0.7329 - val_loss: 1.4607 - val_accuracy: 0.7494 - val_precision_7: 0.4000 - val_f1_macro: 0.1320 - val_f1_weighted: 0.7546 - lr: 1.0000e-05\n",
       "Epoch 16/20\n",
-      " 93/210 [============>.................] - ETA: 30:07 - loss: 2.1843 - accuracy: 0.7322 - precision_7: 0.4500 - f1_macro: 0.1293 - f1_weighted: 0.7298"
+      "210/210 [==============================] - ETA: 0s - loss: 3.0281 - accuracy: 0.7327 - precision_7: 0.3800 - f1_macro: 0.1319 - f1_weighted: 0.7333 \n",
+      "Epoch 17: val_f1_weighted did not improve from 0.76422\n",
+      "210/210 [==============================] - 3249s 15s/step - loss: 3.0281 - accuracy: 0.7327 - precision_7: 0.3800 - f1_macro: 0.1319 - f1_weighted: 0.7333 - val_loss: 1.4561 - val_accuracy: 0.7488 - val_precision_7: 0.4286 - val_f1_macro: 0.1334 - val_f1_weighted: 0.7544 - lr: 1.0000e-05\n",
+      "Epoch 18/20\n",
+      "210/210 [==============================] - ETA: 0s - loss: 3.0239 - accuracy: 0.7322 - precision_7: 0.3800 - f1_macro: 0.1340 - f1_weighted: 0.7332 \n",
+      "Epoch 18: val_f1_weighted did not improve from 0.76422\n",
+      "210/210 [==============================] - 3246s 15s/step - loss: 3.0239 - accuracy: 0.7322 - precision_7: 0.3800 - f1_macro: 0.1340 - f1_weighted: 0.7332 - val_loss: 1.4546 - val_accuracy: 0.7488 - val_precision_7: 0.4286 - val_f1_macro: 0.1334 - val_f1_weighted: 0.7544 - lr: 1.0000e-05\n",
+      "Epoch 19/20\n",
+      "210/210 [==============================] - ETA: 0s - loss: 3.0196 - accuracy: 0.7324 - precision_7: 0.3800 - f1_macro: 0.1342 - f1_weighted: 0.7333 \n",
+      "Epoch 19: val_f1_weighted did not improve from 0.76422\n",
+      "210/210 [==============================] - 3243s 15s/step - loss: 3.0196 - accuracy: 0.7324 - precision_7: 0.3800 - f1_macro: 0.1342 - f1_weighted: 0.7333 - val_loss: 1.4544 - val_accuracy: 0.7488 - val_precision_7: 0.4286 - val_f1_macro: 0.1334 - val_f1_weighted: 0.7544 - lr: 1.0000e-06\n",
+      "Epoch 20/20\n",
+      "210/210 [==============================] - ETA: 0s - loss: 3.0192 - accuracy: 0.7324 - precision_7: 0.3800 - f1_macro: 0.1361 - f1_weighted: 0.7334 \n",
+      "Epoch 20: val_f1_weighted did not improve from 0.76422\n",
+      "210/210 [==============================] - 3238s 15s/step - loss: 3.0192 - accuracy: 0.7324 - precision_7: 0.3800 - f1_macro: 0.1361 - f1_weighted: 0.7334 - val_loss: 1.4542 - val_accuracy: 0.7488 - val_precision_7: 0.4286 - val_f1_macro: 0.1334 - val_f1_weighted: 0.7544 - lr: 1.0000e-06\n"
      ]
     }
    ],
