--- a/Arisa - Splitting Train Test.ipynb
+++ b/Arisa - Splitting Train Test.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "356025b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-16 04:48:12.150022: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-04-16 04:48:13.069901: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:\n",
+      "2023-04-16 04:48:13.070040: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/opt/amazon/efa/lib:/opt/amazon/openmpi/lib:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:\n",
+      "2023-04-16 04:48:13.070051: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "94f4889c-7931-4347-900b-9cde82152e38",
    "metadata": {
     "tags": []
@@ -241,19 +253,19 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tiles = pd.read_csv(r'./Data/Tiles_binned_zipcode.csv')\n",
+    "tiles = pd.read_csv(r'Data/Tiles_binned_zipcode.csv')\n",
     "tiles.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "090f815f-b410-491e-b21c-c05b47b1d97f",
    "metadata": {
     "tags": []
@@ -317,7 +329,7 @@
        " '94188']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "0356aacb-9f2d-4c6b-b146-d4fa64a58187",
    "metadata": {
     "tags": []
@@ -341,9 +353,9 @@
     "                   'Lat1',\n",
     "                   'Mid_lat',\n",
     "                   'Mid_long',\n",
-    "                   'Paving_future',\n",
+    "                   # 'Paving_future',\n",
     "                   'bin',\n",
-    "                   'Collisions_Future',\n",
+    "                   # 'Collisions_Future',\n",
     "                   'Collisions_Future_binary',\n",
     "                   'Collisions_Historical_binary',\n",
     "                   'zip_code']"
@@ -351,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "ce45ef78-e71b-4ddb-b7ce-fa51be667759",
    "metadata": {
     "tags": []
@@ -381,13 +393,13 @@
        "      <th>Tile_ID</th>\n",
        "      <th>Stop_Signs</th>\n",
        "      <th>Paving_historical</th>\n",
+       "      <th>Paving_future</th>\n",
        "      <th>Bus_stop</th>\n",
+       "      <th>Collisions_Future</th>\n",
        "      <th>Collisions_Historical</th>\n",
        "      <th>RTTYP_I</th>\n",
        "      <th>RTTYP_M</th>\n",
        "      <th>RTTYP_O</th>\n",
-       "      <th>RTTYP_S</th>\n",
-       "      <th>RTTYP_U</th>\n",
        "      <th>...</th>\n",
        "      <th>94129</th>\n",
        "      <th>94130</th>\n",
@@ -409,10 +421,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -433,10 +445,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -457,10 +469,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -481,10 +493,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -505,10 +517,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -524,35 +536,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
+       "<p>5 rows × 43 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Tile_ID  Stop_Signs  Paving_historical  Bus_stop  Collisions_Historical  \\\n",
-       "0       36         0.0                0.0       0.0                    0.0   \n",
-       "1       37         0.0                0.0       0.0                    0.0   \n",
-       "2      151         0.0                0.0       0.0                    0.0   \n",
-       "3      152         0.0                0.0       0.0                    0.0   \n",
-       "4      153         0.0                0.0       0.0                    0.0   \n",
+       "   Tile_ID  Stop_Signs  Paving_historical  Paving_future  Bus_stop  \\\n",
+       "0       36         0.0                0.0            0.0       0.0   \n",
+       "1       37         0.0                0.0            0.0       0.0   \n",
+       "2      151         0.0                0.0            0.0       0.0   \n",
+       "3      152         0.0                0.0            0.0       0.0   \n",
+       "4      153         0.0                0.0            0.0       0.0   \n",
        "\n",
-       "   RTTYP_I  RTTYP_M  RTTYP_O  RTTYP_S  RTTYP_U  ...  94129  94130  94131  \\\n",
-       "0        0        1        0        0        0  ...      0      0      0   \n",
-       "1        0        1        0        0        0  ...      0      0      0   \n",
-       "2        0        1        0        0        0  ...      0      0      0   \n",
-       "3        0        1        0        0        0  ...      0      0      0   \n",
-       "4        0        1        0        0        0  ...      0      0      0   \n",
+       "   Collisions_Future  Collisions_Historical  RTTYP_I  RTTYP_M  RTTYP_O  ...  \\\n",
+       "0                0.0                    0.0        0        1        0  ...   \n",
+       "1                0.0                    0.0        0        1        0  ...   \n",
+       "2                0.0                    0.0        0        1        0  ...   \n",
+       "3                0.0                    0.0        0        1        0  ...   \n",
+       "4                0.0                    0.0        0        1        0  ...   \n",
        "\n",
-       "   94132  94133  94134  94141  94143  94158  94188  \n",
-       "0      0      0      0      0      0      0      0  \n",
-       "1      0      0      0      0      0      0      0  \n",
-       "2      0      0      0      0      0      0      0  \n",
-       "3      0      0      0      0      0      0      0  \n",
-       "4      0      0      0      0      0      0      0  \n",
+       "   94129  94130  94131  94132  94133  94134  94141  94143  94158  94188  \n",
+       "0      0      0      0      0      0      0      0      0      0      0  \n",
+       "1      0      0      0      0      0      0      0      0      0      0  \n",
+       "2      0      0      0      0      0      0      0      0      0      0  \n",
+       "3      0      0      0      0      0      0      0      0      0      0  \n",
+       "4      0      0      0      0      0      0      0      0      0      0  \n",
        "\n",
-       "[5 rows x 41 columns]"
+       "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,22 +576,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "f3693092",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(tiles, tiles['bins_numeric'],\n",
-    "                                   random_state=104, \n",
-    "                                   test_size=0.20, \n",
-    "                                   shuffle=True)"
+    "# x_train, x_test, y_train, y_test = train_test_split(tiles, tiles['bins_numeric'],\n",
+    "#                                    random_state=104, \n",
+    "#                                    test_size=0.20, \n",
+    "#                                    shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "74a2e0c7-8898-4254-bc2a-e950ecccf103",
    "metadata": {
     "tags": []
@@ -606,15 +618,17 @@
     }
    ],
    "source": [
-    "pivot = x_train.pivot_table(index=['bins_numeric'], values=['Tile_ID'], aggfunc=len)\n",
-    "print(pivot)"
+    "# pivot = x_train.pivot_table(index=['bins_numeric'], values=['Tile_ID'], aggfunc=len)\n",
+    "# print(pivot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "1e942aa3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -628,22 +642,22 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize =(10, 5))\n",
-    "ax.hist(y_train)\n",
-    "plt.title('Histogram of Bins in Train Set')\n",
-    "plt.show()"
+    "# fig, ax = plt.subplots(figsize =(10, 5))\n",
+    "# ax.hist(y_train)\n",
+    "# plt.title('Histogram of Bins in Train Set')\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "aad9a720-6dba-4a34-bc09-ce5f1fc5283a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "x_train.to_csv('./Data/Tiles_TRAIN.csv', index = False) "
+    "tiles.to_csv('Data/Tiles_Future.csv', index = False) "
    ]
   },
   {
@@ -655,7 +669,7 @@
    },
    "outputs": [],
    "source": [
-    "x_test.to_csv('./Data/Tiles_TEST.csv', index = False) "
+    "# x_test.to_csv('./Data/Tiles_TEST.csv', index = False) "
    ]
   }
  ],
@@ -675,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
